crates/rome_formatter/tests/specs/prettier/range/issue-4206-3.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: issue-4206-3.js

---
# Input
```js
/* */ function F<<<PRETTIER_RANGE_START>>>oo(){
/**/
}<<<PRETTIER_RANGE_END>>>

```

# Output
```js
/* */ function F
<<<PRETTIER_RANGE_START>>>oo()
{
  /**/
}
<<<PRETTIER_RANGE_END>>>

```

# Errors
```
error[SyntaxError]: expected a parenthesis '(' but instead found '<<'
  ┌─ issue-4206-3.js:1:17
  │
1 │ /* */ function F<<<PRETTIER_RANGE_START>>>oo(){
  │                 ^^ Expected a parenthesis '(' here

error[SyntaxError]: expected a statement but instead found '<<<PRETTIER_RANGE_END>>>'
  ┌─ issue-4206-3.js:3:2
  │
3 │ }<<<PRETTIER_RANGE_END>>>
  │  ^^^^^^^^^^^^^^^^^^^^^^^^ Expected a statement here


```


